--- a/ridesandfood.html
+++ b/ridesandfood.html
@@ -31,7 +31,7 @@
             <a href="ridesandfood.html">Rides & Food</a>
             <img src=imgs/logo.png alt="logo" height="50">
             <a href="pricing.html">Pricing</a>
-            <a href="about.html">About Us</a>
+            <a href="about.html">Contact</a>
         </nav>
 
         <!-- MAP -->
@@ -257,7 +257,7 @@
 
         <div id="normalMenu">
             <p style="text-align: center;">Of course, we also sell normal food:</p>
-            <table>
+            <table id="normalMenuTable">
                 <tr>
                     <th>A very normal burger</th>
                     <td>$10</td>
